grammar/syntax.txt
expression                  -> equality
equality                    -> comparison ( ( "!=" | "==" ) comparison )*
comparison                  -> addition ( ( ">" | ">=" | "<" | "<=" ) addition )*
addition                    -> multiplication ( ( "-" | "+" ) multiplication )*
multiplication              -> unary ( ( "/" | "*" | "%" ) unary )*
unary                       -> ( "!" | "-" ) unary
                             | primary

primary                     -> NUMBER | STRING | BOOLEAN | "null"
                             | "(" expression ")"
